# iaxclient

./: README
lib/: CMakeLists.txt  audio_encode.c  audio_openal.c  audio_portaudio.c  iaxclient.h  iaxclient_lib.c  iaxclient_lib.h
lib/libiax2/src/: frame.h  iax-client.h  iax.c
lib/libspeex/: jitter.c
